fixed tex reading

--- a/app/imgui.ini
+++ b/app/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=10,10
 Size=400,400
 
 [Window][Dear ImGui Demo]
@@ -17,4 +17,8 @@ Size=420,398
 [Window][Scene Options]
 Pos=29,20
 Size=374,483
+
+[Window][Renderer Info + Options]
+Pos=5,5
+Size=352,52
 
