fixed numerous memory issues, prepped for pbr

--- a/src/Renderer.vcxproj
+++ b/src/Renderer.vcxproj
@@ -30,14 +30,15 @@
     <ClCompile Include="ImGUI\imgui_tables.cpp" />
     <ClCompile Include="ImGUI\imgui_widgets.cpp" />
     <ClCompile Include="ImGUI\misc\cpp\imgui_stdlib.cpp" />
+    <ClCompile Include="Scene\PbrScene.cpp" />
     <ClCompile Include="Support\RootSignatureBuilder.cpp" />
-    <ClCompile Include="Scene\Loader.cpp" />
+    <ClCompile Include="Scene\Util\Loader.cpp" />
     <ClCompile Include="Scene\ObjectScene.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Scene\Camera.cpp" />
-    <ClCompile Include="Scene\Geometry.cpp" />
-    <ClCompile Include="Scene\Mesh.cpp" />
-    <ClCompile Include="Scene\Drawable.cpp" />
+    <ClCompile Include="Scene\Util\Camera.cpp" />
+    <ClCompile Include="Scene\Util\Geometry.cpp" />
+    <ClCompile Include="Scene\Util\Mesh.cpp" />
+    <ClCompile Include="Scene\Util\Drawable.cpp" />
     <ClCompile Include="Scene\Scene.cpp" />
     <ClCompile Include="Support\Shader.cpp" />
     <ClCompile Include="Support\Window.cpp" />
@@ -64,18 +65,19 @@
     <ClInclude Include="ImGUI\imstb_textedit.h" />
     <ClInclude Include="ImGUI\imstb_truetype.h" />
     <ClInclude Include="ImGUI\misc\cpp\imgui_stdlib.h" />
+    <ClInclude Include="Scene\PbrScene.h" />
     <ClInclude Include="Support\RootSignatureBuilder.h" />
     <ClInclude Include="Scene\GridConstants.h" />
-    <ClInclude Include="Scene\Loader.h" />
+    <ClInclude Include="Scene\Util\Loader.h" />
     <ClInclude Include="Scene\ObjectScene.h" />
     <ClInclude Include="main.h" />
-    <ClInclude Include="Scene\Camera.h" />
+    <ClInclude Include="Scene\Util\Camera.h" />
     <ClInclude Include="D3D\Buffer\StructuredBuffer.h" />
-    <ClInclude Include="Scene\Geometry.h" />
-    <ClInclude Include="Scene\Mesh.h" />
-    <ClInclude Include="Scene\Drawable.h" />
+    <ClInclude Include="Scene\Util\Geometry.h" />
+    <ClInclude Include="Scene\Util\Mesh.h" />
+    <ClInclude Include="Scene\Util\Drawable.h" />
     <ClInclude Include="Scene\Scene.h" />
-    <ClInclude Include="Scene\Vertex.h" />
+    <ClInclude Include="Scene\Util\Vertex.h" />
     <ClInclude Include="Support\ComPointer.h" />
     <ClInclude Include="Support\Shader.h" />
     <ClInclude Include="Support\Window.h" />
