--- a/src/Renderer.vcxproj
+++ b/src/Renderer.vcxproj
@@ -20,6 +20,7 @@
     <ClCompile Include="D3D\Pipeline\RenderPipeline.cpp" />
     <ClCompile Include="D3D\Pipeline\MeshPipeline.cpp" />
     <ClCompile Include="D3D\Buffer\VertexBuffer.cpp" />
+    <ClCompile Include="D3D\ResourceManager.cpp" />
     <ClCompile Include="D3D\Texture.cpp" />
     <ClCompile Include="Debug\DebugLayer.cpp" />
     <ClCompile Include="ImGUI\backends\imgui_impl_dx12.cpp" />
@@ -53,6 +54,7 @@
     <ClInclude Include="D3D\Pipeline\RenderPipeline.h" />
     <ClInclude Include="D3D\Pipeline\Pipeline.h" />
     <ClInclude Include="D3D\Buffer\VertexBuffer.h" />
+    <ClInclude Include="D3D\ResourceManager.h" />
     <ClInclude Include="D3D\Texture.h" />
     <ClInclude Include="Debug\DebugLayer.h" />
     <ClInclude Include="ImGUI\backends\imgui_impl_dx12.h" />
