--- a/src/Renderer.vcxproj
+++ b/src/Renderer.vcxproj
@@ -32,7 +32,7 @@
     <ClCompile Include="ImGUI\imgui_widgets.cpp" />
     <ClCompile Include="ImGUI\misc\cpp\imgui_stdlib.cpp" />
     <ClCompile Include="Scene\PbrScene.cpp" />
-    <ClCompile Include="Support\ImguiHelper.cpp" />
+    <ClCompile Include="Support\ImguiManager.cpp" />
     <ClCompile Include="Support\RootSignatureBuilder.cpp" />
     <ClCompile Include="Scene\Util\Loader.cpp" />
     <ClCompile Include="Scene\ObjectScene.cpp" />
@@ -69,7 +69,7 @@
     <ClInclude Include="ImGUI\imstb_truetype.h" />
     <ClInclude Include="ImGUI\misc\cpp\imgui_stdlib.h" />
     <ClInclude Include="Scene\PbrScene.h" />
-    <ClInclude Include="Support\ImguiHelper.h" />
+    <ClInclude Include="Support\ImguiManager.h" />
     <ClInclude Include="Support\RootSignatureBuilder.h" />
     <ClInclude Include="Scene\GridConstants.h" />
     <ClInclude Include="Scene\Util\Loader.h" />
