--- a/src/Renderer.vcxproj
+++ b/src/Renderer.vcxproj
@@ -31,16 +31,15 @@
     <ClCompile Include="ImGUI\imgui_tables.cpp" />
     <ClCompile Include="ImGUI\imgui_widgets.cpp" />
     <ClCompile Include="ImGUI\misc\cpp\imgui_stdlib.cpp" />
-    <ClCompile Include="Scene\PbrScene.cpp" />
+    <ClCompile Include="Scene\PbrDrawable.cpp" />
     <ClCompile Include="Support\ImguiManager.cpp" />
     <ClCompile Include="Support\RootSignatureBuilder.cpp" />
     <ClCompile Include="Scene\Util\Loader.cpp" />
-    <ClCompile Include="Scene\ObjectScene.cpp" />
+    <ClCompile Include="Scene\ObjectDrawable.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Scene\Util\Camera.cpp" />
     <ClCompile Include="Scene\Util\Geometry.cpp" />
     <ClCompile Include="Scene\Util\Mesh.cpp" />
-    <ClCompile Include="Scene\Util\Drawable.cpp" />
     <ClCompile Include="Scene\Scene.cpp" />
     <ClCompile Include="Support\Shader.cpp" />
     <ClCompile Include="Support\Window.cpp" />
@@ -68,12 +67,12 @@
     <ClInclude Include="ImGUI\imstb_textedit.h" />
     <ClInclude Include="ImGUI\imstb_truetype.h" />
     <ClInclude Include="ImGUI\misc\cpp\imgui_stdlib.h" />
-    <ClInclude Include="Scene\PbrScene.h" />
+    <ClInclude Include="Scene\PbrDrawable.h" />
     <ClInclude Include="Support\ImguiManager.h" />
     <ClInclude Include="Support\RootSignatureBuilder.h" />
     <ClInclude Include="Scene\GridConstants.h" />
     <ClInclude Include="Scene\Util\Loader.h" />
-    <ClInclude Include="Scene\ObjectScene.h" />
+    <ClInclude Include="Scene\ObjectDrawable.h" />
     <ClInclude Include="Scene\Util\Camera.h" />
     <ClInclude Include="D3D\Buffer\StructuredBuffer.h" />
     <ClInclude Include="Scene\Util\Geometry.h" />
